# nicorec

./: .travis.yml  README.md  default.nix  nicorec.cabal  stack.yaml
app/: Main.hs
src/: Cookie.hs  Error.hs  Lib.hs
src/Lib/: Channel.hs  Community.hs  Conduit.hs  Cookie.hs  Error.hs  FileSystem.hs  Operators.hs  Parser.hs  Url.hs  Utility.hs
test/: Spec.hs
