name:                nicorec
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/nicorec#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Lib.Error
                     , Lib.Community
  other-modules:       Lib.Operators
                     , Lib.Cookie
                     , Lib.Parser
                     , Lib.Url
                     , Lib.FileSystem
                     , Lib.Utility
  build-depends:       base >= 4.7 && < 5
                     , wreq >= 0.5 && < 0.6
                     , bytestring >= 0.10 && < 0.11
                     , http-client >= 0.5 && < 0.6
                     , text >= 1.2 && < 1.3
                     , lens >= 4 && < 5
                     , regex-tdfa >= 1.2 && < 1.3
                     , websockets >= 0.10 && < 0.11
                     , network >= 2.6 && < 2.7
                     , MissingH >= 1.4 && < 1.5
                     , lens-aeson >= 1 && < 2
                     , exceptions >= 0.8 && < 0.9
                     , monad-loops >= 0.4 && < 0.5
                     , network-uri >= 2.6 && < 3
                     , cookie >= 0.4 && < 0.5
                     , binary >= 0.8 && < 0.9
                     , filepath >= 1.4 && < 1.5
                     , directory >= 1.3 && < 1.4
                     , xml-conduit >= 1.5 && < 1.8
                     , html-conduit >= 1.2 && < 1.3
  default-language:    Haskell2010

executable nicorec-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring >= 0.10 && < 0.11
                     , nicorec
                     , read-env-var >= 1 && < 2
                     , lens >= 4 && < 5
                     , text >= 1.2 && < 1.3
  default-language:    Haskell2010

test-suite nicorec-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nicorec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/nicorec
